<resources>
    <string name="app_name">TAGVirtualGraffiti</string>

    <!-- UI Text -->
    <string name="splash_screen">Splash Screen</string>

    <string name="account">Account</string>
    <string name="new_account">New Account</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="change_username">Change Username</string>
    <string name="login_title">Take Over the World!</string>
    <string name="title">TAGVirtualGraffiti</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create">Create</string>
    <string name="clear">Clear</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="new_user">New User</string>

    <string name="settings">Settings</string>

    <string name="score">Score</string>
    <string name="currently_tagged_by">Currently Tagged by</string>

    <string name="tag_this_place">TAG!</string>

    <string name="launch_map">Launch Map</string>

    <string name="refresh">Refresh</string>

    <!-- Dialog Text -->
    <string name="error">Error</string>
    <string name="warning">Warning</string>
    <string name="login_error_text">Login failed.</string>
    <string name="passwords_match_error_text">Passwords do not match.</string>
    <string name="no_net_text">Cannot complete action: No network connectivity.</string>
    <string name="ok_text">OK</string>
    <string name="try_again_text">Try Again</string>
    <string name="should_quit">Quit TAGVirtualGraffiti?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="permission_notice">This app asks permission to access location. Please grant these permissions.</string>
    <string name="exit">Exit</string>
    <string name="cancel">Cancel</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="title_nearby_places">Nearby Places</string>
    <string name="title_current_location">Selected Location</string>
    <string name="title_map">Map</string>
    <string name="title_leaderboard">Leaderboard</string>
    <string name="title_profile">Profile</string>
    <string name="title_location_permission">Location Permission</string>

    <string name="title_offline">Error: Offline</string>
    <string name="title_location_disable">Error: Location Unavailable</string>

    <string name="msg_offline">You are currently offline. You must be online to use this feature.</string>
    <string name="msg_location_disabled">Your location is currently unavailable. Your location must be available to use this feature.</string>


    <string name="user_prefs">UserPrefs</string>
    <string name="channel_name">NotifChannel</string>
    <string name="channel_description">ChannelDescription</string>
    <string name="title_activity_gameplay">GameplayActivity</string>

    <string name="rock">ROCK</string>
    <string name="paper">PAPER</string>
    <string name="scissors">SCISSORS</string>
</resources>
